# tslite

./: README.md  pyproject.toml
tslite/: __init__.py  backtest.py  models.py  splitters.py
tslite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tslite/examples/: Demo tslite.ipynb
