[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tslite"
version = "0.1.0"
description = "Minimal sliding-window time series forecasting with statsmodels (Holt, Holt-Winters, ARIMA/SARIMA)."
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
"pandas>=2.0",
"numpy>=1.24",
"statsmodels>=0.13",
"scikit-learn>=1.2",
"matplotlib>=3.8"
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[tool.setuptools.packages.find]
include = ["tslite*"]
